==> ToothbrushB/midway-quickstart/components/VL53L0X/src/VL53L0X.cpp <==
#include "VL53L0X.hpp"
#include "esp_timer.h"
#include "esp_log.h"
#include <driver/i2c.h>
#define TIMEOUT (10 / portTICK_PERIOD_MS) // I2C command timeout
#define VL53L0X_LOG ESP_LOGI // Set to allow I2C logging
#define VL53L0X_LOG(tag, ...) err = err;
#define millis() (esp_timer_get_time() / 1000LL)
#define startTimeout() (timeout_start_ms = millis())
#define checkTimeoutExpired() (io_timeout > 0 && ((uint16_t)(millis() - timeout_start_ms)) > io_timeout)
#define encodeVcselPeriod(period_pclks) (((period_pclks) >> 1) - 1)

void VL53L0X::writeReg16Bit(uint8_t reg, uint16_t val)
{
    i2c_cmd_handle_t i = Write(reg);
    i2c_master_write_byte(i, val >> 8, 1);
    i2c_master_write_byte(i, val, 1);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "W %02X=%04X %s", reg, val, esp_err_to_name(err));
}

void VL53L0X::writeReg32Bit(uint8_t reg, uint32_t val)
{
    i2c_cmd_handle_t i = Write(reg);
    i2c_master_write_byte(i, val >> 24, 1);
    i2c_master_write_byte(i, val >> 16, 1);
    i2c_master_write_byte(i, val >> 8, 1);
    i2c_master_write_byte(i, val, 1);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "W %02X=%08lu %s", reg, val, esp_err_to_name(err));
}

uint16_t
VL53L0X::readReg16Bit(uint8_t reg)
{
    uint8_t buf[2] = {};
    i2c_cmd_handle_t i = Read(reg);
    i2c_master_read_byte(i, buf + 0, I2C_MASTER_ACK);
    i2c_master_read_byte(i, buf + 1, I2C_MASTER_LAST_NACK);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "R %02X=%02X%02X %s", reg, buf[0], buf[1], esp_err_to_name(err));
    return (buf[0] << 8) + buf[1];
}

uint32_t
VL53L0X::readReg32Bit(uint8_t reg)
{
    uint8_t buf[4] = {};
    i2c_cmd_handle_t i = Read(reg);
    i2c_master_read_byte(i, buf + 0, I2C_MASTER_ACK);
    i2c_master_read_byte(i, buf + 1, I2C_MASTER_ACK);
    i2c_master_read_byte(i, buf + 2, I2C_MASTER_ACK);
    i2c_master_read_byte(i, buf + 3, I2C_MASTER_LAST_NACK);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "R %02X=%02X%02X%02X%02X %s", reg, buf[0], buf[1], buf[2], buf[3], esp_err_to_name(err));
    return (buf[0] << 24) + (buf[1] << 16) + (buf[2] << 8) + buf[3];
}

void VL53L0X::readMulti(uint8_t reg, uint8_t *dst, uint8_t count)
{
    i2c_cmd_handle_t i = Read(reg);
    if (count > 1)
        i2c_master_read(i, dst + 0, count - 1, I2C_MASTER_ACK);
    i2c_master_read_byte(i, dst + count - 1, I2C_MASTER_LAST_NACK);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "R %02X (%d) %s", reg, count, esp_err_to_name(err));
}

void VL53L0X::writeMulti(uint8_t reg, uint8_t const *src, uint8_t count)
{
    i2c_cmd_handle_t i = Write(reg);
    i2c_master_write(i, (uint8_t *)src, count, 1);
    esp_err_t err = Done(i);
    VL53L0X_LOG(TAG, "W %02X (%d) %s", reg, count, esp_err_to_name(err));
}

const char *
VL53L0X::performSingleRefCalibration(uint8_t vhv_init_byte)
{
    writeReg8Bit(SYSRANGE_START, 0x01 | vhv_init_byte); // VL53L0X_REG_SYSRANGE_MODE_START_STOP
    startTimeout();
    while ((readReg8Bit(RESULT_INTERRUPT_STATUS) & 0x07) == 0)
    {
        if (checkTimeoutExpired())
            return "CAL Timeout";
    }
    writeReg8Bit(SYSTEM_INTERRUPT_CLEAR, 0x01);
    writeReg8Bit(SYSRANGE_START, 0x00);
    return NULL;
}

const char *
VL53L0X::getSpadInfo(uint8_t *count, int *type_is_aperture)
{
    uint8_t tmp;

    writeReg8Bit(0x80, 0x01);
    writeReg8Bit(0xFF, 0x01);
    writeReg8Bit(0x00, 0x00);

    writeReg8Bit(0xFF, 0x06);
    writeReg8Bit(0x83, readReg8Bit(0x83) | 0x04);
    writeReg8Bit(0xFF, 0x07);
    writeReg8Bit(0x81, 0x01);

    writeReg8Bit(0x80, 0x01);

    writeReg8Bit(0x94, 0x6b);
    writeReg8Bit(0x83, 0x00);
    startTimeout();
    while (readReg8Bit(0x83) == 0x00)
    {
        if (checkTimeoutExpired())
            return "SPAD Timeout";
    }
    writeReg8Bit(0x83, 0x01);
    tmp = readReg8Bit(0x92);

    *count = tmp & 0x7f;
    *type_is_aperture = (tmp >> 7) & 0x01;

    writeReg8Bit(0x81, 0x00);
    writeReg8Bit(0xFF, 0x06);
    writeReg8Bit(0x83, readReg8Bit(0x83) & ~0x04);
    writeReg8Bit(0xFF, 0x01);
    writeReg8Bit(0x00, 0x01);

    writeReg8Bit(0xFF, 0x00);
    writeReg8Bit(0x80, 0x00);

    return NULL;
}

const char *
VL53L0X::setVcselPulsePeriod(vcselPeriodType type, uint8_t period_pclks)
{
    uint8_t vcsel_period_reg = encodeVcselPeriod(period_pclks);

    SequenceStepEnables enables;
    SequenceStepTimeouts timeouts;

    getSequenceStepEnables(&enables);
    getSequenceStepTimeouts(&enables, &timeouts);

    // "Apply specific settings for the requested clock period"
    // "Re-calculate and apply timeouts, in macro periods"

    // "When the VCSEL period for the pre or final range is changed,
    // the corresponding timeout must be read from the device using
    // the current VCSEL period, then the new VCSEL period can be
    // applied. The timeout then must be written back to the device
    // using the new VCSEL period.
    //
    // For the MSRC timeout, the same applies - this timeout being
    // dependant on the pre-range vcsel period."

    if (type == VcselPeriodPreRange)
    {
        // "Set phase check limits"
        switch (period_pclks)
        {
        case 12:
            writeReg8Bit(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x18);
            break;

        case 14:
            writeReg8Bit(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x30);
            break;

        case 16:
            writeReg8Bit(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x40);
            break;

        case 18:
            writeReg8Bit(PRE_RANGE_CONFIG_VALID_PHASE_HIGH, 0x50);
            break;

        default:
            // invalid period
            return "Invalid period";
        }
        writeReg8Bit(PRE_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);

        // apply new VCSEL period
        writeReg8Bit(PRE_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

        // update timeouts

        // set_sequence_step_timeout() begin
        // (SequenceStepId == VL53L0X_SEQUENCESTEP_PRE_RANGE)

        uint16_t new_pre_range_timeout_mclks = timeoutMicrosecondsToMclks(timeouts.pre_range_us, period_pclks);

        writeReg16Bit(PRE_RANGE_CONFIG_TIMEOUT_MACROP_HI, encodeTimeout(new_pre_range_timeout_mclks));

        // set_sequence_step_timeout() end

        // set_sequence_step_timeout() begin
        // (SequenceStepId == VL53L0X_SEQUENCESTEP_MSRC)

        uint16_t new_msrc_timeout_mclks = timeoutMicrosecondsToMclks(timeouts.msrc_dss_tcc_us, period_pclks);

        writeReg8Bit(MSRC_CONFIG_TIMEOUT_MACROP, (new_msrc_timeout_mclks > 256) ? 255 : (new_msrc_timeout_mclks - 1));

        // set_sequence_step_timeout() end
    }
    else if (type == VcselPeriodFinalRange)
    {
        switch (period_pclks)
        {
        case 8:
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x10);
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);
            writeReg8Bit(GLOBAL_CONFIG_VCSEL_WIDTH, 0x02);
            writeReg8Bit(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x0C);
            writeReg8Bit(0xFF, 0x01);
            writeReg8Bit(ALGO_PHASECAL_LIM, 0x30);
            writeReg8Bit(0xFF, 0x00);
            break;

        case 10:
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x28);
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);
            writeReg8Bit(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
            writeReg8Bit(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x09);
            writeReg8Bit(0xFF, 0x01);
            writeReg8Bit(ALGO_PHASECAL_LIM, 0x20);
            writeReg8Bit(0xFF, 0x00);
            break;

        case 12:
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x38);
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);
            writeReg8Bit(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
            writeReg8Bit(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x08);
            writeReg8Bit(0xFF, 0x01);
            writeReg8Bit(ALGO_PHASECAL_LIM, 0x20);
            writeReg8Bit(0xFF, 0x00);
            break;

        case 14:
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_HIGH, 0x48);
            writeReg8Bit(FINAL_RANGE_CONFIG_VALID_PHASE_LOW, 0x08);
            writeReg8Bit(GLOBAL_CONFIG_VCSEL_WIDTH, 0x03);
            writeReg8Bit(ALGO_PHASECAL_CONFIG_TIMEOUT, 0x07);
            writeReg8Bit(0xFF, 0x01);
            writeReg8Bit(ALGO_PHASECAL_LIM, 0x20);
            writeReg8Bit(0xFF, 0x00);
            break;

        default:
            // invalid period
            return "Invalid period";
        }

        // apply new VCSEL period
        writeReg8Bit(FINAL_RANGE_CONFIG_VCSEL_PERIOD, vcsel_period_reg);

        // update timeouts

        // set_sequence_step_timeout() begin
        // (SequenceStepId == VL53L0X_SEQUENCESTEP_FINAL_RANGE)

        // "For the final range timeout, the pre-range timeout
        //  must be added. To do this both final and pre-range
        //  timeouts must be expressed in macro periods MClks
        //  because they have different vcsel periods."

        uint16_t new_final_range_timeout_mclks = timeoutMicrosecondsToMclks(timeouts.final_range_us, period_pclks);

        if (enables.pre_range)
            new_final_range_timeout_mclks += timeouts.pre_range_mclks;

        writeReg16Bit(FINAL_RANGE_CONFIG_TIMEOUT_MACROP_HI, encodeTimeout(new_final_range_timeout_mclks));

        // set_sequence_step_timeout end
    }
    else
        return "Invalid type";

    // "Finally, the timing budget must be re-applied"
    const char *err;
    if ((err = setMeasurementTimingBudget(measurement_timing_budget_us)))
        return err;

    // "Perform the phase calibration. This is needed after changing on vcsel period."
    // VL53L0X_perform_phase_calibration() begin

    uint8_t sequence_config = readReg8Bit(SYSTEM_SEQUENCE_CONFIG);
    writeReg8Bit(SYSTEM_SEQUENCE_CONFIG, 0x02);
    performSingleRefCalibration(0x0);
    writeReg8Bit(SYSTEM_SEQUENCE_CONFIG, sequence_config);

    // VL53L0X_perform_phase_calibration() end

    return NULL;
}

void VL53L0X::startContinuous(uint32_t period_ms)
{
    writeReg8Bit(0x80, 0x01);
    writeReg8Bit(0xFF, 0x01);
    writeReg8Bit(0x00, 0x00);
    writeReg8Bit(0x91, stop_variable);
    writeReg8Bit(0x00, 0x01);
    writeReg8Bit(0xFF, 0x00);
    writeReg8Bit(0x80, 0x00);

    if (period_ms != 0)
    {
        // continuous timed mode

        // VL53L0X_SetInterMeasurementPeriodMilliSeconds() begin

        uint16_t osc_calibrate_val = readReg16Bit(OSC_CALIBRATE_VAL);

        if (osc_calibrate_val != 0)
        {
            period_ms *= osc_calibrate_val;
        }

        writeReg32Bit(SYSTEM_INTERMEASUREMENT_PERIOD, period_ms);

        // VL53L0X_SetInterMeasurementPeriodMilliSeconds() end

        writeReg8Bit(SYSRANGE_START, 0x04); // VL53L0X_REG_SYSRANGE_MODE_TIMED
    }
    else
    {
        // continuous back-to-back mode
        writeReg8Bit(SYSRANGE_START, 0x02); // VL53L0X_REG_SYSRANGE_MODE_BACKTOBACK
    }
}

uint16_t
VL53L0X::readRangeContinuousMillimeters()
{
    startTimeout();
    while ((readReg8Bit(RESULT_INTERRUPT_STATUS) & 0x07) == 0)
    {
        if (checkTimeoutExpired())
        {
            did_timeout = 1;
            return 65535;
        }
    }
    // assumptions: Linearity Corrective Gain is 1000 (default);
    // fractional ranging is not enabled
    uint16_t range = readReg16Bit(RESULT_RANGE_STATUS + 10);
    writeReg8Bit(SYSTEM_INTERRUPT_CLEAR, 0x01);
    return range;
}

uint16_t
VL53L0X::readRangeSingleMillimeters()
{
    writeReg8Bit(0x80, 0x01);
    writeReg8Bit(0xFF, 0x01);
    writeReg8Bit(0x00, 0x00);
    writeReg8Bit(0x91, stop_variable);
    writeReg8Bit(0x00, 0x01);
    writeReg8Bit(0xFF, 0x00);
    writeReg8Bit(0x80, 0x00);

    writeReg8Bit(SYSRANGE_START, 0x01);

    // "Wait until start bit has been cleared"
    startTimeout();
    while (readReg8Bit(SYSRANGE_START) & 0x01)
    {
        if (checkTimeoutExpired())
        {
            did_timeout = 1;
            return 65535;
        }
    }

    return readRangeContinuousMillimeters();
}
